<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_streamer_button">Spotify Streamer</string>
    <string name="scores_button">Scores App</string>
    <string name="library_button">Library App</string>
    <string name="build_it_bigger_button">Build It Bigger</string>
    <string name="xyz_reader_button">XYZ Reader</string>
    <string name="capstone_button">Capstone: My Own App</string>
    <string name="spotify_streamer_toast">This button will launch the Spotify Streamer app!</string>
    <string name="scores_toast">This button will launch the Scores app!</string>
    <string name="library_toast">This button will launch the Library app!</string>
    <string name="build_it_bigger_toast">This button will launch the Build it Bigger app!</string>
    <string name="xyz_reader_toast">This button will launch the XYZ reader app!</string>
    <string name="capstone_toast">This button will launch my Capstone app!</string>







</resources>
