<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    tools:context=".MainActivity">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1"
        tools:context=".MainActivity">


        <Button
            android:id="@+id/spotify_streamer"
            style="@style/ButtonStyle"
            android:onClick="onClick"
            android:text="@string/spotify_streamer_button" />

        <Button
            android:id="@+id/scores"
            style="@style/ButtonStyle"
            android:onClick="onClick"
            android:text="@string/scores_button" />

        <Button
            android:id="@+id/library"
            style="@style/ButtonStyle"
            android:onClick="onClick"
            android:text="@string/library_button" />

        <Button
            android:id="@+id/build_it_bigger"
            style="@style/ButtonStyle"
            android:onClick="onClick"
            android:text="@string/build_it_bigger_button" />

        <Button
            android:id="@+id/xyz_reader"
            style="@style/ButtonStyle"
            android:onClick="onClick"
            android:text="@string/xyz_reader_button" />

        <Button
            android:id="@+id/capstone"
            style="@style/ButtonStyle.Red"
            android:onClick="onClick"
            android:text="@string/capstone_button" />


    </LinearLayout>

</RelativeLayout>